--- a/packages/ubuntu_desktop_installer/lib/l10n/app_en.arb
+++ b/packages/ubuntu_desktop_installer/lib/l10n/app_en.arb
@@ -73,6 +73,46 @@
   "welcome": "Welcome",
   "@welcome": {},
 
+  "whoAreYouPageTitle": "Who are you?",
+  "@whoAreYouPageTitle": {},
+
+  "whoAreYouPageRealNameLabel": "Your name",
+  "@whoAreYouPageRealNameLabel": {},
+  "whoAreYouPageRealNameRequiredValidatorErrorText": "name is required",
+  "@whoAreYouPageRealNameRequiredValidatorErrorText": {},
+  "whoAreYouPageRealNameMinLengthValidatorErrorText": "name must be at least 2 digits long",
+  "@whoAreYouPageRealNameMinLengthValidatorErrorText": {},
+
+  "whoAreYouPageComputerNameLabel": "Your computers name",
+  "@whoAreYouPageComputerNameLabel": {},
+  "whoAreYouPageComputerNameInfo": "The name it uses when it talks to other computers.",
+  "@whoAreYouPageComputerNameInfo": {},
+  "whoAreYouPageComputerNameRequiredValidatorErrorText": "computer name is required",
+  "@whoAreYouPageComputerNameRequiredValidatorErrorText": {},
+  "whoAreYouPageComputerNameMinLengthValidatorErrorText": "computer name must be at least 2 digits long",
+  "@whoAreYouPageComputerNameMinLengthValidatorErrorText": {},
+
+  "whoAreYouPageUsernameLabel": "Pick a username",
+  "@whoAreYouPageUsernameLabel": {},
+  "whoAreYouPageUsernameRequiredValidatorErrorText": "username is required",
+  "@whoAreYouPageUsernameRequiredValidatorErrorText": {},
+  "whoAreYouPageUsernameMinLengthValidatorErrorText": "username must be at least 2 digits long",
+  "@whoAreYouPageUsernameMinLengthValidatorErrorText": {},
+  "whoAreYouPageUsernamePatternValidatorErrorText": "invalid username",
+  "@whoAreYouPageUsernamePatternValidatorErrorText": {},
+
+  "whoAreYouPagePasswordLabel": "Choose a password",
+  "@whoAreYouPagePasswordLabel": {},
+  "whoAreYouPagePasswordWeakPasswordLabel": "Weak password",
+  "@whoAreYouPagePasswordWeakPasswordLabel": {},
+  "whoAreYouPagePasswordAveragePasswordLabel": "Average password",
+  "@whoAreYouPagePasswordAveragePasswordLabel": {},
+  "whoAreYouPagePasswordStrongPasswordLabel": "Strong password",
+  "@whoAreYouPagePasswordStrongPasswordLabel": {},
+
+  "whoAreYouPageConfirmPasswordLabel": "Confirm your password",
+  "@whoAreYouPageConfirmPasswordLabel": {},
+
   "keyboardLayoutPageTitle": "Keyboard layout",
   "@keyboardLayoutPageTitle": {},
 
